[package]
name = "indyforge"
version = "0.8.0"
authors = ["Sylvain Martel <sylvain.martel10@mcn.gouv.qc.ca>"]
edition = "2021"
include = ["LICENSE-APACHE", "LICENSE-MIT", "**/*.rs", "Cargo.toml"]
rust-version = "1.80.1"

[package.metadata.docs.rs]
all-features = true
targets = ["x86_64-unknown-linux-gnu", "wasm32-unknown-unknown"]

[dependencies]
futures-executor = "0.3.30"
egui = "0.27.0"
eframe = { version = "0.27.0", default-features = false, features = [
    # "accesskit", # Make egui comptaible with screen readers. NOTE: adds a lot of dependencies.
    "default_fonts", # Embed the default egui fonts.
    "glow", # Use the glow rendering backend. Alternative: "wgpu".
    "persistence", # Enable restoring app state when restarting the app.
] }
log = "0.4"
rfd = "0.14"
# You only need serde if you want app persistence:
serde = { version = "1", features = ["derive"] }
anyhow = "1.0"
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
derive_more = "0.99"
reqwest = { version = "0.12", features = ["json"] }


# Indy
indy-data-types = "0.7.1"
indy-vdr = { git = "https://github.com/SylvainMartel/indy-vdr.git" }
getrandom = { version = "0.2", features = ["js"] }

# Wallet
aries-askar = "0.3"
bs58 = "0.5"
sha2 = "0.10"

# native:
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
env_logger = "0.11"

# web:
[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen-futures = "0.4"




[profile.release]
opt-level = 2 # fast and small wasm

# Optimize all dependencies even in debug builds:
[profile.dev.package."*"]
opt-level = 2


[patch.crates-io]

# If you want to use the bleeding edge version of egui and eframe:
# egui = { git = "https://github.com/emilk/egui", branch = "master" }
# eframe = { git = "https://github.com/emilk/egui", branch = "master" }

# If you fork https://github.com/emilk/egui you can test with:
# egui = { path = "../egui/crates/egui" }
# eframe = { path = "../egui/crates/eframe" }
